# GRILS

./: .gitignore  README.md
GRILS_UNIX/: CMakeLists.txt  README.md  grils  main
GRILS_UNIX/sources/: Config.h  GRILS.cpp  Test.cpp  Test.h  Turn.cpp  Turn.h  functions.cpp  functions.h  types.h
GRILS_Visual_Studio/: GRILS.sln
GRILS_Visual_Studio/ConsoleApplication1/: Config.h  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  GRILS.cpp  Test.cpp  Test.h  Turn.cpp  Turn.h  functions.cpp  functions.h  types.h
Grills_UNIX/: main
Grills_UNIX/sources/: Config.h  Test.cpp  functions.cpp  functions.h  types.h
MCTOPMTW test instances/: README.md  Results MCTOPMTW.xls  Results-1-1.csv  Results-1-1.xls  Results.csv  Test_Script.py
